--- a/config.core.yaml
+++ b/config.core.yaml
@@ -1,4 +1,7 @@
 version: 2.0.6
-redis:
-  host: "pitchfork"
-  port: 9006
+mongo:
+  host: "pitchfork.mskcc.org"
+  port: 27017
+  database: "pi_workflows"
+  username:
+  password:
